--- a/boilerplate/css/components/buttons.css
+++ b/boilerplate/css/components/buttons.css
@@ -1,6 +1,6 @@
 .btn-blue {
   color: white;
-  background: #6772e5;
+  background: #F5A9D0;
   box-shadow: 0 4px 6px rgba(50,50,93,.11);
   border-radius: 4px;
   font-size: 20px;
